Fix: z-indexの変数が正常にトランスパイルできていなかったのを修正
node-sassのアップデートで本来誤っていた文法が通っていたのが修正された(?)
refs node-sass#1943

--- a/src/common.scss
+++ b/src/common.scss
@@ -13,7 +13,7 @@ $z-indexes:(
 
 :root {
   @each $name in $z-indexes {
-    --z-index-#{$name}: index($z-indexes, $name);
+    --z-index-#{$name}: #{index($z-indexes, $name)};
   }
   --z-index-thumnail-zoom: 20;
 
